# ConsoleGameEnginePlusPlus

./: CMakeLists.txt  README.md  main.cpp
include/: Canvas.h  Colours.h  ConsoleGame.h  GameCartridge.h  GameConsole.h  Input.h  TestCartridge.h
main/: CMakeLists.txt  main.cpp
main/include/: Canvas.h
main/include/core/: Canvas.h  GameCartridge.h  GameConsole.h  Input.h  Utils.h
main/include/debug/: Debug.h  FileLogger.h  Logger.h  TestCartridge.h
main/src/: GameConsole.cpp  TestCartridge.cpp  Utils.cpp
main/src/core/: Canvas.cpp  GameCartridge.cpp  GameConsole.cpp  Input.cpp  Utils.cpp
main/src/debug/: Debug.cpp  FileLogger.cpp  TestCartridge.cpp
src/: Canvas.cpp  ConsoleGame.cpp  GameCartridge.cpp  GameConsole.cpp  Input.cpp  TestCartridge.cpp
